# pybrook-beta

./: .gitignore  .pdm-python  404.html  Dockerfile  Makefile  calc_latency.py  docker-compose.yml  index.html  locustfile.py  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: dockerimage.yaml  docs.yaml  redismodule.yaml
docs/: index.md
docs/scripts/: gen_ref_pages.py
pybrook/: __main__.py  config.py  encoding.py  models.py  redis_plugin_integration.py  schemas.py
pybrook-redismodule/: Cargo.toml  Dockerfile  README.md
pybrook-redismodule/.github/workflows/: docs.yaml
pybrook-redismodule/src/: lib.rs
pybrook/consumers/: base.py  field_generator.py  worker.py
pybrook/examples/: demo.py  ztm.py
reference/: SUMMARY.html
reference/pybrook/: __init__.html  __main__.html  config.html  encoding.html  models.html  redis_plugin_integration.html  schemas.html
reference/pybrook/consumers/: __init__.html  base.html  field_generator.html  worker.html
reference/pybrook/examples/: __init__.html  demo.html  ztm.html
search/: search_index.json
tests/: conftest.py  test_examples.py  test_redismodule.py
