[tool.isort]
line_length = 90
multi_line_output = 3
force_single_line = false
balanced_wrapping = true
default_section = "THIRDPARTY"
known_first_party = "pybrook"
include_trailing_comma = true

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]



[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "locust<3.0.0,>=2.29.1",
    "mkdocstrings[python]<1.0.0,>=0.25.1",
    "mkdocs<2.0.0,>=1.4.2",
    "mkdocs-material<10.0.0,>=9.1.3",
    "mike<2.0.0,>=1.0.1",
    "livereload<3.0.0,>=2.6.3",
    "yapf<1.0.0,>=0.31.0",
    "isort<6.0.0,>=5.5.1",
    "darglint<2.0.0,>=1.5.8",
    "flake8-bugbear<22.0.0,>=21.4.3",
    "flake8-builtins<2.0.0,>=1.5.3",
    "flake8-comprehensions<4.0.0,>=3.3.1",
    "flake8-pytest-style<2.0.0,>=1.3.0",
    "flake8-string-format<1.0.0,>=0.3.0",
    "flake8-tidy-imports<5.0.0,>=4.2.1",
    "flake8-variables-names<1.0.0,>=0.0.4",
    "pep8-naming<1.0.0,>=0.12.1",
    "mypy>=1.11.2",
    "pytest<8.0.0,>=7.3.1",
    "pytest-cov<4.0.0,>=3.0.0",
    "pytest-sugar<1.0.0,>=0.9.4",
    "ptpython<4.0.0,>=3.0.7",
    "pytest-asyncio<1.0.0,>=0.15.1",
    "types-redis>=4.6.0.20240903",
    "locust<3.0.0,>=2.5.0",
    "wps-light<1.0.0,>=0.16.1",
    "httpx<1.0.0,>=0.27.2",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.1",
    "ruff>=0.6.7",
]

[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.mypy]
files = ["pybrook"]
ignore_missing_imports = true
plugins = "pydantic.mypy"

[project]
name = "pybrook"
version = "0.1.6"
description = "PyBrook - a real-time cloud computing framework for the Internet of Things."
authors = [
    {name = "Michał Rokita", email = "mrokita@mrokita.pl"},
]
dependencies = [
    "fastapi<1.0.0,>=0.95.2",
    "uvicorn[standard]<1.0.0,>=0.22.0",
    "redis[asyncio]<5.0.0,>=4.5.5",
    "loguru<1.0.0,>=0.7.0",
    "gunicorn<21.0.0,>=20.1.0",
    "watchdog<4.0.0,>=3.0.0",
    "uvloop<1.0.0,>=0.19.0",
    "orjson<4.0.0,>=3.8.7",
    "pydantic<2.0.0,>=1.10.8",
    "pyyaml!=5.4.0,!=5.4.1,!=6.0.0",
]
requires-python = "<4.0,>=3.8"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}

[project.urls]
repository = "https://github.com/pybrook/pybrook"

[project.scripts]
pybrook = "pybrook.__main__:main"

