[package]
name = "pybrook_redis"
version = "0.1.0"
edition = "2021"
rust-version = "1.80.0"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linkme = "0.3.28"
redis-module = "2.0.7"
redis-module-macros = "2.0.7"
serde = "1.0.204"
serde_json = "1.0.120"
